# beets-ytdlp

./: README.md  env.config.yml  pyproject.toml
beetsplug/: ytdlp.py
