[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-ytdlp"
version = "0.1.0"
description = "Beets plugin to import albums using yt-dlp"
dependencies = [
  "beets >= 1.6.0",
  "yt-dlp >= 2024.0.0",
  "ytmusicapi >= 1.6.0",
  "pyxdg >= 0.27",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "python-lsp-server",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
